@@ -30,10 +30,3 @@ matrix:
           env: NUMPY_VERSION=1.6
         - python: "3.3"
           env: NUMPY_VERSION=1.6
-    allow_failures:
-        - python: "2.7"
-          env: NUMPY_VERSION=1.8
-        - python: "3.2"
-          env: NUMPY_VERSION=1.8
-        - python: "3.3"
-          env: NUMPY_VERSION=1.8
